implemented parallel distance functions

--- a/Assignment/Makefile
+++ b/Assignment/Makefile
@@ -16,7 +16,7 @@ valgrind_clean:
 	rm -f *.txt
 
 main: main.c point_set.o point_set.h distance.o distance.h k_nearest_neighbours.o k_nearest_neighbours.h sorting.o sorting.h
-	cc -o main point_set.o distance.o k_nearest_neighbours.o sorting.o main.c -lm
+	cc -o main point_set.o distance.o k_nearest_neighbours.o sorting.o main.c -lm -fopenmp
 
 clean:
 	rm -f *.out *.o *.txt
